# makea.cat

./: .gitignore  README.md  package.json
client/: package-lock.json
client/src/pages/: index.astro
public/: index.html  main.js
server/: Cargo.toml  time-zones.txt
server/public/: index.html
server/src/: draw.rs  main.rs
src/: draw.rs  main.rs  time.rs
src/pages/: index.astro
