[package]
name = "makea-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["query"] }
chrono = "0.4.38"
env_logger = "0.11.5"
font-kit = "0.14.2"
log = "0.4.22"
lyon_geom = "1.0.6"
png = "0.17.14"
rand = "0.8.5"
raqote = "0.8.5"
tokio = { version = "1.41.1", features = ["full"] }
